--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 ﻿version: 2
 updates:
   - package-ecosystem: "nuget"
-    directory: "/"
+    directory: "/WatermarkStamper"
     schedule:
       interval: "daily"
     reviewers:
