--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,12 @@ updates:
   - package-ecosystem: "nuget"
     directory: "/"
     schedule:
-      interval: daily
+      interval: "daily"
+    reviewers:
+      - RakSrinaNa
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    reviewers:
+      - RakSrinaNa
